--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2815,7 +2815,7 @@ section #deportes-eventos{
 
 @media  (min-width: 992px) {
     #noticias .aside-lateral{
-        border-left: 1px solid whitesmoke;
+        border-left: 1px solid rgb(222, 222, 222);
         padding-left: 20px;
     }
 }
@@ -2973,7 +2973,6 @@ section #deportes-eventos{
 
 #noticia .section-title{
     padding-bottom: 10px;
-    border-bottom: 1px solid #eee;
 
 }
 #noticia  .member-img{
