--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -95,6 +95,11 @@ body {
     color: #999999;
 }
 
+.span-style-a{
+    color: #25afc3;
+    font-weight: bold;
+}
+
 a {
   color: #25afc3;
   text-decoration: none;
@@ -116,7 +121,7 @@ a {
     color: rgb(26, 120, 187);
 }
 
-a:hover {
+a:hover,  .span-style-a {
   color: #34c9e0;
   text-decoration: none;
 }
@@ -3437,7 +3442,7 @@ EDA72B
 }
 
 #footer .footer-top .footer-newsletter .canal-difusion {
-  margin-top: 30px;
+  margin-top: 16px;
 
   padding: 6px 10px;
   position: relative;
@@ -3881,6 +3886,19 @@ background-size: cover;
     background-size: cover;
 }
 
+#boleta-digital .portada{
+    background-image: url("../img/boleta-digital/portada.gif");
+    height: 360px;
+    background-position: center;
+    background-size: cover;
+}
+
+#tresa-estudia .portada{
+    background-image: url("/storage/ciudadUniversitaria/tresa-estudia.jpeg");
+    height: 300px;
+    background-position: center;
+    background-size: cover;
+}
 
 /*--------------------------------------------------------------
 # MUNICIPIO / TRES ARROYOS
@@ -4472,3 +4490,22 @@ background-size: cover;
 .grid-container .item-3 {
     background-color: #25afc3;
 }
+
+/*SECCION INFO BOLETA DIGITAL */
+.icono{
+    max-height: 80px; /* Tamaño máximo de las imágenes */
+    margin-bottom: 10px; /* Espacio entre imagen y texto */
+}
+
+
+.instructivo_icono {
+    color: rgb(13, 116, 189);
+    font-size: 60PX;
+}
+
+@media (max-width: 576px) {
+    .row {
+      --bs-gutter-x: 0;
+    }
+  }
+
