--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -937,7 +937,7 @@ h6 {
   text-align: center;
 } */
 
-#hero .menu-home .icon-box{
+#hero .menu-home .icon-box:not(.icon-7){
     padding: 30px 0px;
 }
 
@@ -1027,7 +1027,24 @@ h6 {
     line-height: 1;
     font-size: 16px;
     line-height: 26px;
-  }
+}
+/*Agrego icon 7 para FDT*/
+
+#hero .icon-7 {
+    background-color: #cd9e4d; ;
+}
+
+#hero .icon-7:hover {
+    background-color: #e2b768 ;
+}
+
+#hero .icon-7 img{
+    height: 50px;
+}
+
+#hero .icon-7 h3 {
+    margin: 6px 0 0 0;
+}
 
 /* ----------------------  CARDS SIN FONDO  ----------------------- */
 
