--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -236,12 +236,10 @@ h6 {
 
 #header.header-scrolled,
 #header.header-inner-pages {
-  /* background: rgba(0, 0, 0, 0.8); */
-  /* background: rgba(13, 116, 189, 0.967); */
-  /* background: rgba(244, 244, 244, 0.967); */
-   background: rgba(255, 255, 255, 0.967);
+    /* background: rgba(255, 255, 255, 0.967); */
+    background: whitesmoke;
 
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
 }
 
 #header .logo {
@@ -254,10 +252,6 @@ h6 {
   letter-spacing: 2px;
   text-transform: uppercase;
 }
-
-/* #header .logo a {
-    color: #373737;
-} */
 
 #header .logo a span {
   color: #25afc3;
@@ -299,9 +293,16 @@ h6 {
     /* padding: 3px 6px 4px 6px; */
 }
 
+.navbar .get-started-buttons{
+    display: flex;
+    align-items: center;
+
+}
+
  .navbar .get-started-buttons a{
 
-    border-right: 2px solid #25afc3;
+    border-right: 2px solid #EAEAEA;
+    color: #3e3e3e;
 
 }
 
@@ -316,14 +317,7 @@ h6 {
 
 }
 
-/* .get-started-buttons{
-    display: flex;
-    flex-direction: row;
 
-    justify-content: center;
-    justify-items: center;
-    margin-left: 40px;
-} */
 
 .navbar .get-started-buttons :nth-child(1) a{
     font-size: 14px !important;
@@ -344,19 +338,21 @@ h6 {
     border-right: none;
 }
 
-/* .get-started-btn {
-  font-size: 10px;
-} */
 
-/* .get-started-group:hover {
-  background: #ffbb38;
-  color: #343a40 !important;
-} */
 /* con group me deja margenes y con a no me toma el color de la letra */
  .get-started-btn:hover{
-  background: #34c9e0;
-  color: #343a40 !important;
+  background: #25Afc3;
+  color: white !important;
+  border-radius: 3px;
 }
+
+.get-started-btn:hover .get-started-group {
+    color: white !important;
+  }
+
+  .get-started-btn:hover i {
+    color: white !important;
+  }
 
 @media (min-width: 992px) {
 
@@ -417,18 +413,64 @@ h6 {
   position: relative;
 }
 
+/* Animación subrayado en navbar */
+
+.navbar a.animation-sub {
+    position: relative;
+    text-decoration: none;
+    transition: color 0.3s ease-in-out;
+}
+
+/* Línea animada */
+.navbar a.animation-sub::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -2px; /* Ajusta la distancia de la línea */
+    width: 0;
+    height: 2px;
+    background-color: #25afc3; /* Color del subrayado */
+    color: #0D74BD;
+    transition: width 0.3s ease-in-out;
+}
+
+/* Expandir línea en hover */
+.navbar a.animation-sub:hover::after {
+    width: 100%;
+}
+
+.navbar li a,
+.navbar li a:focus {
+    padding: 2px;
+    /* font-size: 14px; */
+    font-weight: 300;
+    /* color: #373737; */
+    white-space: nowrap;
+    transition: 0.3s;
+    font-family: "Poppins", sans-serif;
+    /* letter-spacing: 0.3px; */
+    /* color: #727272; */
+    font-size: 13px;
+    letter-spacing: 1px;
+     text-transform: uppercase;
+}
+
+
+
 @media (min-width: 992px) {
     .navbar li a,
     .navbar li a:focus {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 10px 0 10px 30px;
-      font-size: 14px;
-      font-weight: 500;
-      /* color: #373737; */
-      white-space: nowrap;
-      transition: 0.3s;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .navbar li {
+        padding: 10px 15px 10px 15px;
+    }
+
+    .navbar .dropdown ul li {
+        padding: 5px;
     }
 }
 
@@ -444,7 +486,8 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #25afc3;
+    color: #25afc3;
+    /* color: #0D74BD; */
 }
 
 .navbar .dropdown ul {
@@ -462,16 +505,65 @@ h6 {
   transition: 0.3s;
 }
 
+@media (min-width: 991px) {
+    .font-color-wh{
+    color: #ffffff;
+    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.922);
+    }
+
+
+
+    .font-color-bl{
+        color: #727272;
+
+        text-shadow: #f5f5f5;
+        /* text-shadow: 1px #010101; */
+    }
+
+    .font-color-bl i{
+        color: #2464a3;
+        text-shadow: #f5f5f5;
+        /* text-shadow: 1px #010101; */
+    }
+}
+}
+
+@media (max-width: 991px) {
+
+    .font-color-wh{
+        color: rgb(13, 116, 189);
+        /* text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.922); */
+    }
+
+    .font-color-bl{
+        /* color: rgb(13, 116, 189); */
+
+        /* text-shadow: 1px #010101; */
+    }
+
+    .mobile-nav-toggle{
+        background-color: #ffffffb5;
+        /* border: 1px solid #ffffffb5; */
+        border-radius: 5px;
+        /* color: #FFF;; */
+    }
+}
+
+
 .navbar .dropdown ul li {
   min-width: 200px;
 }
 
 .navbar .dropdown ul a {
-  padding: 10px 20px;
-  font-size: 14px;
-  text-transform: none;
-  color: #343434;
+  padding: 6px 12px;
   font-weight: 400;
+  font-family: "Poppins", sans-serif;
+  text-transform: none;
+  color: #727272;
+  white-space: nowrap;
+  font-size: 13px;
+  letter-spacing: 1px;
+   text-transform: uppercase;
 }
 
 .navbar .dropdown ul a i {
@@ -481,7 +573,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  background-color: #cecece;
+  background-color: #eaeAEA;
   transform: translateY(-2px);
 }
 
@@ -522,11 +614,20 @@ h6 {
 }
 
 
+
+
+/* .mobile-nav-toggle{
+    background-color: #ffffffb5;
+    border-radius: 5px;
+} */
+
 /**
 * Mobile Navigation
 */
 .mobile-nav-toggle {
-  color: #fff;
+
+  background-color: rgba(245, 245, 245, 0.655);
+  border-radius: 5px;
   font-size: 28px;
   cursor: pointer;
   display: none;
@@ -579,7 +680,7 @@ h6 {
 .navbar-mobile li a:focus {
   padding: 10px 20px;
   font-size: 15px;
-  color: rgb(13, 116, 189);
+
 }
 
 .navbar-mobile a:hover,
@@ -612,7 +713,7 @@ h6 {
 
 .navbar-mobile .dropdown ul a {
   padding: 10px 20px;
-  color: rgb(13, 116, 189);
+  color: rgb(87, 87, 87);
 }
 
 .navbar-mobile .dropdown ul a i {
@@ -4082,35 +4183,6 @@ background-size: cover;
 .modalimg{
     width: 100%;
 }
-@media (min-width: 991px) {
-    .font-color-wh{
-    color: #ffffff;
-    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.922);
-    }
-
-    .font-color-bl{
-        color: #343434;
-        text-shadow: #f5f5f5;
-        /* text-shadow: 1px #010101; */
-    }
-}
-
-@media (max-width: 991px) {
-    .font-color-wh{
-        color: rgb(13, 116, 189);
-        /* text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.922); */
-    }
-
-    .font-color-bl{
-        color: rgb(13, 116, 189);
-
-        /* text-shadow: 1px #010101; */
-    }
-
-    .mobile-nav-toggle{
-        color: #FFF;;
-    }
-}
 
 .list-group-item{
     /* color: #25afc3; */
@@ -4319,6 +4391,13 @@ background-size: cover;
     /* margin: 20px; */
     font-size: 12px;
 }
+
+.today a video{
+
+    height: 100%;
+
+}
+
 
 .today img:hover{
   box-shadow: 6px 6px 8px 6px rgba(120, 120, 120, 0.693);
